feat(mcp): 集成MCP工具并完善错误处理
- 在WeatherService中添加Jackson注解以增强API文档描述
- 重构SseHelper将错误消息类型从log改为error
- 在AgentChatServiceImpl中集成McpToolIntegrationService服务
- 优化McpUtils中URL路径处理逻辑以正确提取host:port部分
- 扩展McpServerConfigResult和McpToolInfoResult数据结构
- 重命名McpServerConfigService中方法名testConnection为fetchToolsFromServer
- 添加McpToolIntegrationService实现MCP工具的动态获取和转换
- 在EaAgentController中增强异常处理并发送错误消息到客户端
- 添加完整的MCP Server配置管理控制器接口
- 在前端ChatApi中支持接收error类型的消息
- 更新McpApi中方法名与后端保持一致
- 在聊天界面组件中优化错误显示和工具图标
- 在MCP管理页面中添加工具列表获取和Schema查看功能